# Damer

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/CXLDataMovement/: Passes.h  Passes.td
lib/: CMakeLists.txt  Passes.cpp
test/: CMakeLists.txt  cxl-hw-data-movement.mlir  cxl-sw-data-movement.mlir  lit.cfg.py  lit.site.cfg.py.in
tools/: CMakeLists.txt  compile_ptx_to_circt_trace.py  concordia_coverage_report.py  generate_concordia_mlir.py  run_concordia_workloads.py
tools/cxl-data-movement-opt/: CMakeLists.txt  cxl-data-movement-opt.cpp
workloads/concordia/: COVERAGE_PLAN.md  README.md  SUBAGENT_BRIEF.md  slugarch-cxl-gemm-hardware.mlir  slugarch-cxl-gemm-software.mlir
workloads/concordia/ptxspatial/: gemm.circt-trace.mlir  gemm.ptxspatial.json  gemm.software-trace.mlir  qwen_decode_token.circt-trace.mlir  qwen_decode_token.ptxspatial.json  qwen_decode_token.software-trace.mlir  qwen_prefill_gemm.circt-trace.mlir  qwen_prefill_gemm.ptxspatial.json  qwen_prefill_gemm.software-trace.mlir  ternary_matmul.circt-trace.mlir  ternary_matmul.ptxspatial.json  ternary_matmul.software-trace.mlir
